# NaturalComp

./: Algorithm.h  CMakeLists.txt  Gillespie.cpp  Gillespie.h  Parameter.h  Reaction.cpp  Reaction.h  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  main.cpp
Simulations/: Simulation1.cpp  Simulation1.h  Simulation1.p  Simulation2.cpp  Simulation2.h  Simulation2.p  Simulation3.cpp  Simulation3.h  Simulation3.p
